--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,10 @@ dependencies:
   ffi: ^1.1.2
   camera: ^0.9.4+14
 
+  # state management
+  flutter_bloc: ^8.0.1
+  equatable: ^2.0.3
+
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
